--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   </head>
   <body>
     <div> <h2> Index HTML Assignment</h2> </div>
-    <p>Dardielle Joseph</p>
+    <p><strong>Name:</strong> Dardielle Joseph</p>
     <hr>
     <p>
       This summer I traveled with my family to <em>Marco Island, Miami, and New
       York</em>.
     </p>
-    <p> My some of strengths are:
+    <p> Some of my strengths are:
         <ul> 
             <li>Great communication skills
             <li>Creativity
@@ -30,7 +30,12 @@
             </p>
     <p> I'm excited to learn how to efficiently make a website look good.</p>
     <hr>
-    <p> The five elements I used were colors, lists, headings, emphasizing, and line separation.
+    <p> <ul>
+            <li>The main five elements I used were colors, lists, headings, emphasizing, and line separation.
+            <li>The extra 2 elements I added were strong and padding
+            </ul>
     </p>
+    <hr>
+    <p> I didn't really learn anything because I already knew those elements and I want to learn more elements to add to webpages.</p>
   </body>
 </html>
